feat: Add `recall_memories` tool, implement dynamic memory threshold and universal entropy decay, and introduce SDI tuning parameters.

--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,7 @@ GOAL_WEIGHT_CRITICAL=10
 GOAL_WEIGHT_HIGH=8
 GOAL_WEIGHT_MEDIUM=5
 GOAL_WEIGHT_LOW=3
+
+# SDI Tuning for AI Verbosity
+NEURON_SDI_AI_DAMPING=0.8
+NEURON_SDI_AI_LENGTH_PENALTY=2.0
