feat: Introduce new optimizer component with AST-based code modification, draft management, and dedicated tests.

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,17 @@
 # NEURON-X Configuration
 
+# === Autonomous Optimization Settings ===
+
+# Probability (0.0-1.0) that each thought cycle checks for optimization opportunities
+# Default: 0.05 (5% chance per cycle, roughly every 3-4 minutes)
+# Set to 1.0 for testing to trigger on every cycle
+AUTONOMOUS_OPT_PROBABILITY=0.05
+
+# How many hours to cache attempted optimizations before allowing retry
+# Default: 48 hours
+# This prevents the system from repeatedly trying the same optimization
+OPTIMIZER_CACHE_EXPIRY_HOURS=48
+
 # Logging Configuration
 # Levels: DEBUG, INFO, WARNING, ERROR, CRITICAL
 NEURON_X_LOG_LEVEL=ERROR
