--- a/.env.example
+++ b/.env.example
@@ -1,27 +1,33 @@
 # NEURON-X Configuration
 
 # === Autonomous Optimization Settings ===
-
-# Probability (0.0-1.0) that each thought cycle checks for optimization opportunities
-# Default: 0.05 (5% chance per cycle, roughly every 3-4 minutes)
-# Set to 1.0 for testing to trigger on every cycle
 AUTONOMOUS_OPT_PROBABILITY=0.05
-
-# How many hours to cache attempted optimizations before allowing retry
-# Default: 48 hours
-# This prevents the system from repeatedly trying the same optimization
 OPTIMIZER_CACHE_EXPIRY_HOURS=48
 
-# Logging Configuration
-# Levels: DEBUG, INFO, WARNING, ERROR, CRITICAL
+# === Logging Configuration ===
 NEURON_X_LOG_LEVEL=ERROR
 
-# Goal Priority Weights (Probabilistic Selection)
+# === Goal Priority Weights ===
 GOAL_WEIGHT_CRITICAL=10
 GOAL_WEIGHT_HIGH=8
 GOAL_WEIGHT_MEDIUM=5
 GOAL_WEIGHT_LOW=3
 
-# SDI Tuning for AI Verbosity
+# === SDI Tuning ===
 NEURON_SDI_AI_DAMPING=0.8
 NEURON_SDI_AI_LENGTH_PENALTY=2.0
+
+# === External Integration Settings ===
+
+# Signal Messenger (via signal-cli)
+# The phone number registered with signal-cli (e.g., +491701234567)
+# SIGNAL_ACCOUNT=
+
+# Discord
+# DISCORD_TOKEN=
+# DISCORD_CHANNEL_ID=
+
+# WhatsApp (via Twilio)
+# TWILIO_ACCOUNT_SID=
+# TWILIO_AUTH_TOKEN=
+# TWILIO_WHATSAPP_NUMBER=
