feat: implement system restart and resume architecture
- bridge.py: added _trigger_restart, _check_for_resume, and context tracking
- cognition.py & memory.py: enhanced memory retrieval and cognitive flow
- plugins: updated Discord and Signal connectors to support resume state
- infrastructure: added constants for persistence and updated README

--- a/.env.example
+++ b/.env.example
@@ -23,6 +23,9 @@ NEURON_SDI_AI_LENGTH_PENALTY=2.0
 # The phone number registered with signal-cli (e.g., +491701234567)
 # SIGNAL_ACCOUNT=
 
+# Daily News Briefing Recipient (Phone number for Signal)
+# DAILY_BRIEFING_RECIPIENT=
+
 # Discord
 # DISCORD_TOKEN=
 # DISCORD_CHANNEL_ID=
